--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,12 @@ license = Perl_5
 copyright_holder = Alexei Znamensky
 copyright_year   = 2011
 
-version = 0.003
+version = 0.004
+
+[MetaResources]
+bugtracker.web  = http://github.com/russoz/Dist-Zilla-PluginBundle-Author-RUSSOZ/issues
+repository.web  = http://github.com/russoz/Dist-Zilla-PluginBundle-Author-RUSSOZ
+repository.url  = git://github.com/russoz/Dist-Zilla-PluginBundle-Author-RUSSOZ.git
+repository.type = git
 
 [@Author::RUSSOZ]
