--- a/dist.ini
+++ b/dist.ini
@@ -13,3 +13,6 @@ repository.url  = git://github.com/russoz/Dist-Zilla-PluginBundle-Author-RUSSOZ.
 repository.type = git
 
 [@Author::RUSSOZ]
+
+[@Git]
+
