--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,6 @@ license = Perl_5
 copyright_holder = Alexei Znamensky
 copyright_year   = 2011
 
-version = 0.013
 [@Author::RUSSOZ]
+version = gitnext
 
