--- a/dist.ini
+++ b/dist.ini
@@ -7,3 +7,33 @@ copyright_year   = 2011
 [@Author::RUSSOZ]
 version = gitnext
 twitter_tags = #distzilla
+
+[Prereqs]
+Dist::Zilla = 4.102341
+Dist::Zilla::Role::PluginBundle::Easy = 0
+
+Dist::Zilla::PluginBundle::Git = 0
+Dist::Zilla::PluginBundle::TestingMania = 0.012
+
+Dist::Zilla::Plugin::AutoVersion = 0
+Dist::Zilla::Plugin::VersionFromModule = 0
+Dist::Zilla::Plugin::OurPkgVersion = 0
+Dist::Zilla::Plugin::MetaJSON = 0
+Dist::Zilla::Plugin::ReadmeFromPod = 0
+Dist::Zilla::Plugin::InstallGuide = 0
+Dist::Zilla::Plugin::PerlTidy = 0.11
+Dist::Zilla::Plugin::GitFmtChanges = 0
+Dist::Zilla::Plugin::GithubMeta = 0
+Dist::Zilla::Plugin::AutoPrereqs = 0
+
+Dist::Zilla::Plugin::TaskWeaver = 0
+
+Dist::Zilla::Plugin::ReportVersions::Tiny = 0
+Dist::Zilla::Plugin::PodWeaver = 0
+
+Dist::Zilla::Plugin::Test::UseAllModules = 0
+Dist::Zilla::Plugin::Test::Pod::No404s = 0
+
+Dist::Zilla::Plugin::Twitter = 0
+Dist::Zilla::Plugin::Signature = 0
+
