dependency on version 0.102362 of Pod::Elemental
Signed-off-by: Alexei Znamensky <russoz@cpan.org>

--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,7 @@ copyright_year   = 2011
 
 [@Author::RUSSOZ]
 version = gitnext
-twitter_tags = #distzilla
+no_twitter = 1
 
 [Prereqs]
 Dist::Zilla = 4.102341
@@ -36,4 +36,6 @@ Dist::Zilla::Plugin::Test::Pod::No404s = 0
 
 Dist::Zilla::Plugin::Twitter = 0
 Dist::Zilla::Plugin::Signature = 0
+
+Pod::Elemental = 0.102362
 
