--- a/dist.ini
+++ b/dist.ini
@@ -33,8 +33,8 @@ Dist::Zilla::Plugin::PodWeaver = 0
 Dist::Zilla::Plugin::Test::UseAllModules = 0
 Dist::Zilla::Plugin::Test::Pod::No404s = 0
 
-Dist::Zilla::Plugin::Twitter = 0
 Dist::Zilla::Plugin::Signature = 0
 
 Pod::Elemental = 0.102362
+Pod::Weaver::Plugin::EnsureUniqueSections = 0
 
