New option report and added dependency
Signed-off-by: Alexei Znamensky <russoz@cpan.org>

--- a/dist.ini
+++ b/dist.ini
@@ -34,7 +34,9 @@ Dist::Zilla::Plugin::Test::UseAllModules = 0
 Dist::Zilla::Plugin::Test::Pod::No404s = 0
 
 Dist::Zilla::Plugin::Signature = 0
+Dist::Zilla::Plugin::ReportPhases = 0
 
 Pod::Elemental = 0.102362
 Pod::Weaver::Plugin::EnsureUniqueSections = 0
+Pod::Weaver::Section::BugsAndLimitations = 0
 
