--- a/dist.ini
+++ b/dist.ini
@@ -34,9 +34,12 @@ Dist::Zilla::Plugin::Test::UseAllModules = 0
 Dist::Zilla::Plugin::Test::Pod::No404s = 0
 
 Dist::Zilla::Plugin::Signature = 0
-Dist::Zilla::Plugin::ReportPhases = 0
+Dist::Zilla::Plugin::ReportPhase = 0
 
 Pod::Elemental = 0.102362
 Pod::Weaver::Plugin::EnsureUniqueSections = 0
 Pod::Weaver::Section::BugsAndLimitations = 0
+
+Test::CPAN::Meta::JSON = 0
+Test::Pod::Coverage = 0
 
