The Dist::Zilla plugin ExtraTests must be by the end of the dist.ini file

--- a/dist.ini
+++ b/dist.ini
@@ -43,8 +43,8 @@ disable = Test::Synopsis
 [Test::Pod::No404s]
 [Signature]
 [ReportPhase]
-;[Git]
-
+[@Git]
+[ExtraTests]
 
 [Prereqs]
 Dist::Zilla = 0
